--- a/Java/class Java/5_Strings/a1.md
+++ b/Java/class Java/5_Strings/a1.md
@@ -1,4 +1,4 @@
-why we use String Builder instead of string in java
+## why we use String Builder instead of string in java
 ![alt text](image.png)
 
 This looks like the look should go 26 times but it goes 26*n(where n is the size of the character like here tony)
@@ -7,3 +7,16 @@ Copy garne ∝ String length (m),
 similarily if we have a loop of n the tc O(m*n) ie. O(n^2)
 
 ![alt text](image-1.png)
+
+String Buffer- hashcode-is an integer value that represents on object's unique identity. 
+ie. uniquely identify an obj
+
+why string are immutable in java showing using hashcode
+![alt text](image-3.png)
+# StringBuilder
+![alt text](image-4.png)
+
+intern function use
+when you use new it creates a new obj in heap memory 
+whereas if you normally declare then its called literal and is stored in string pool
+![alt text](image-2.png)
