--- a/Java/class Java/5_Strings/a1.md
+++ b/Java/class Java/5_Strings/a1.md
@@ -20,3 +20,5 @@ intern function use
 when you use new it creates a new obj in heap memory 
 whereas if you normally declare then its called literal and is stored in string pool
 ![alt text](image-2.png)
+
+These are some of the important notes
